--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django
 gunicorn
 django-heroku
 dj-database-url
-django-allauth <= 0.60.1 
+django-allauth == 0.60.1 
 django-bootstrap-v5
 django-storages
 boto3
